# chop-chop

./: Cargo.toml  README.md  build.rs  gresource.xml  gschema.xml  install_schema.sh
Desktop/LLC_Files/chop-chop-main/src/: main.rs
Documents/LLC_Files/chop-chop-main/: Cargo.toml
Projects/LLC_Files/chop-chop-main/src/: main.rs
resources/: resources.gresource.xml  window.ui
src/: main.rs  modeling.rs  size.rs  solvers.rs  ui.rs  units.rs  utils.rs
src/solvers/: naive_solver.rs  oned_solver.rs
src/styles/: style.css
src/ui/: about_dialog.rs  dialogs.rs  display.rs  entry.rs  entry_pane.rs  entry_pane.ui  font_row.rs  font_row.ui  materials_object.rs  overlay.rs  overlay.ui  part.rs  parts.rs  parts_pane.rs  parts_pane.ui  preferences_dialog.rs  preferences_dialog.ui  resources.gresource.xml  shortcuts.ui  solver_overlay.rs  solver_overlay.ui  solver_pane.rs  solver_pane.ui  supplies_pane.rs  supplies_pane.ui  supply.rs  unit_row.rs  unit_row.ui  utils.rs  window.rs  window.ui
test/: example.json
